# xray-client

./: .gitignore  Main.py  README.md  convert.py  getsub.py  requirements.txt  select.txt  setting.json
.github/workflows/: desktop-builds.yml  dev.yml  main.yml
CLI/: CLI.py  Main.py  const.py  convert.py  requirements.txt
GUI-ver/: Example-xray.json  GUI.py  Readme.md  api.py  backend.py  backendflet.py  checkver.py  const.py  convert.py  core-check.py  flet-ui.py  main.py  new_gui.py  ping_proto.py  pyproject.toml
GUI-ver/src/: Examlpe-singbox.json  backend.py  build_appimage.sh  const.py  convert.py  main.py  main.spec  setting.json
GUI-ver/src/AppDir/: AppRun  xc.desktop
core/: version.txt
core/linux/: geosite.db  select.txt  singbox-config.json
core/win/: singbox-config.json
gui/: backend.py  convert.py  functions.py  main.py  mian.py  new_gui.py
